# ats_sentry_ws

./: .gitignore  NAV2.sh  mapping.sh  pp_ros2.sh  rosbag.sh  ws_README.md
docs/: navigate_through_poses_migration_checklist.md  sentry_bt_decision_checklist.md  slim_loopback_refactor.md  移植.md
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/auto_aim_interfaces/share/auto_aim_interfaces/: package.sh
install/behaviortree_ros2/share/behaviortree_ros2/: package.sh
install/btcpp_ros2_interfaces/share/btcpp_ros2_interfaces/: package.sh
install/joint_state_publisher/share/joint_state_publisher/: package.sh
log/: latest_build  latest_list
src/loopback_sim/launch/: bringup_launch.py  loopback_simulation.launch.py  tb3_loopback_simulation_launch.py
src/loopback_sim/nav2_loopback_sim/: loopback_simulator.py  utils.py
src/loopback_sim/params/: nav2_params.yaml
src/loopback_sim/test/: test_copyright.py  test_flake8.py  test_pep257.py
src/pb2025_rm_vision/: Dockerfile  NOTICE  README.md  dependencies.repos
src/pb2025_rm_vision/armor_detector_opencv/: CMakeLists.txt  README.md  package.xml
src/pb2025_rm_vision/armor_detector_openvino/: .gitignore  CMakeLists.txt  CONTRIBUTING.md  README.md  dependencies.repos  package.xml
src/pb2025_rm_vision/armor_detector_openvino/.github/workflows/: ci.yml
src/pb2025_rm_vision/armor_detector_openvino/config/: armor_detector.yaml
src/pb2025_rm_vision/armor_detector_openvino/include/armor_detector_openvino/: detector_openvino.hpp  detector_openvino_node.hpp  mono_measure_tool.hpp  types.hpp
src/pb2025_rm_vision/armor_detector_openvino/launch/: armor_detector_launch.py
src/pb2025_rm_vision/armor_detector_openvino/model/: label.txt
src/pb2025_rm_vision/armor_detector_openvino/src/: mono_measure_tool.cpp  openvino_detector.cpp  openvino_detector_node.cpp
src/pb2025_rm_vision/armor_detector_openvino/test/: test_node_startup.cpp  test_openvino_detector.cpp
src/pb2025_rm_vision/armor_tracker/: CMakeLists.txt  README.md  package.xml
src/pb2025_rm_vision/pb2025_rm_vision/: CMakeLists.txt  package.xml
src/pb2025_rm_vision/pb2025_vision_bringup/: CMakeLists.txt  package.xml
src/pb2025_rm_vision/projectile_motion/: CMakeLists.txt  package.xml
src/pb2025_rm_vision/projectile_motion/config/: projectile_motion.yaml
src/pb2025_rm_vision/projectile_motion/include/projectile_motion/: projectile_motion_node.hpp
src/pb2025_rm_vision/projectile_motion/launch/: projectile_motion_launch.py
src/pb2025_rm_vision/projectile_motion/src/: projectile_motion_node.cpp
src/pb2025_sentry_behavior/: CMakeLists.txt  README.md  dependencies.repos  package.xml
src/pb2025_sentry_behavior/behavior_trees/: Project.btproj  dev_rm.xml  models.xml  rmul_2025.xml  rmul_2026.xml
src/pb2025_sentry_behavior/include/pb2025_sentry_behavior/: custom_types.hpp  decision_utils.hpp  pb2025_sentry_behavior_client.hpp  pb2025_sentry_behavior_server.hpp
src/pb2025_sentry_behavior/include/pb2025_sentry_behavior/plugins/action/: advance_patrol_cursor.hpp  hold_stop_flag.hpp  pub_gimbal_absolute.hpp  pub_gimbal_velocity.hpp  pub_nav2_goal.hpp  pub_spin_speed.hpp  pub_twist.hpp  publish_decision_goal.hpp  reset_low_hp_target.hpp  select_fixed_path.hpp  select_nearest_goal.hpp  select_nearest_retreat_path.hpp  select_path_goal_pose.hpp  select_patrol_path.hpp  send_nav2_goal.hpp  send_nav_through_poses.hpp
src/pb2025_sentry_behavior/include/pb2025_sentry_behavior/plugins/condition/: is_attacked.hpp  is_decision_input_source.hpp  is_decision_mode.hpp  is_game_status.hpp  is_game_time_stage.hpp  is_hp_band.hpp  is_path_goal_reached.hpp  is_rfid_detected.hpp  is_robot_status_in_range.hpp  is_status_ok.hpp
src/pb2025_sentry_behavior/include/pb2025_sentry_behavior/plugins/control/: recovery_node.hpp
src/pb2025_sentry_behavior/include/pb2025_sentry_behavior/plugins/decorator/: rate_controller.hpp  tick_after_timeout_node.hpp
src/pb2025_sentry_behavior/launch/: pb2025_sentry_behavior_launch.py
src/pb2025_sentry_behavior/params/: sentry_behavior.yaml  sentry_behavior_loopback.yaml
src/pb2025_sentry_behavior/plugins/action/: advance_patrol_cursor.cpp  hold_stop_flag.cpp  pub_gimbal_absolute.cpp  pub_gimbal_velocity.cpp  pub_nav2_goal.cpp  pub_spin_speed.cpp  pub_twist.cpp  publish_decision_goal.cpp  reset_low_hp_target.cpp  select_fixed_path.cpp  select_nearest_goal.cpp  select_nearest_retreat_path.cpp  select_path_goal_pose.cpp  select_patrol_path.cpp  send_nav2_goal.cpp  send_nav2_waypoints.cpp  send_nav_through_poses.cpp
src/pb2025_sentry_behavior/plugins/condition/: is_attacked.cpp  is_decision_input_source.cpp  is_decision_mode.cpp  is_game_status.cpp  is_game_time_stage.cpp  is_hp_band.cpp  is_path_goal_reached.cpp  is_rfid_detected.cpp  is_robot_status_in_range.cpp  is_status_ok.cpp
src/pb2025_sentry_behavior/plugins/control/: recovery_node.cpp
src/pb2025_sentry_behavior/plugins/decorator/: rate_controller.cpp  tick_after_timeout_node.cpp
src/pb2025_sentry_behavior/src/: pb2025_sentry_behavior_client.cpp  pb2025_sentry_behavior_server.cpp
src/pb2025_sentry_bringup/: CMakeLists.txt  package.xml
src/pb2025_sentry_bringup/launch/: bringup.launch.py  loopback_decision_sim.launch.py  loopback_navigation.launch.py  record_rosbag_launch.py  rviz_launch.py
src/pb2025_sentry_bringup/map/: .gitignore
src/pb2025_sentry_bringup/params/: node_params.yaml
src/pb2025_sentry_bringup/pcd/: .gitignore
src/pb2025_sentry_bringup/rviz/: sentry_default_view.rviz
src/pb2025_sentry_bringup/scripts/: fake_decision_sim_inputs.py
src/pb2025_sentry_nav/: .gitignore
src/standard_robot_pp_ros2/: CMakeLists.txt  dependencies.repos  package.xml
src/standard_robot_pp_ros2/bt_xml/: robot_decision_tree.xml
src/standard_robot_pp_ros2/config/: standard_robot_pp_ros2.yaml
src/standard_robot_pp_ros2/launch/: standard_robot_pp_ros2.launch.py
src/standard_robot_pp_ros2/src/: 2025_robot_decision.cpp  crc8_crc16.cpp  gimbal_manager.cpp  standard_robot_pp_ros2.cpp
src/tools/rosbag2_composable_recorder/: CMakeLists.txt
(+208 files in other folders)
